src/objects/Local_Authority__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Country</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Country__c.part_of_uk__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Country__c</referenceTo>
        <relationshipName>local_authorities</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>web_site__c</fullName>
        <label>Web Site</label>
        <type>Url</type>
    </fields>
    <label>Local Authority</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Region__c</columns>
        <columns>web_site__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Local Authorities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>